test/typecheck/bad-if-value-void.txt
;;; ERROR: 1
(module
  (func
    block $b
      i32.const 0
      if (result f32)
        nop
      else
        f32.const 0
      end
      drop
    end))
(;; STDERR ;;;
out/test/typecheck/bad-if-value-void.txt:7:9: error: type stack size too small at if true branch. got 0, expected at least 1
        nop
        ^^^
;;; STDERR ;;)
